<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="4"
        android:layout_column="1"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUser"
            style="@style/Login"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:autofillHints="username"
            android:ems="15"
            android:gravity="bottom"
            android:inputType="textEmailAddress"
            android:text="@string/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/Senha"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:ems="15"
            android:gravity="bottom"
            android:inputType="textVisiblePassword"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUser"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/success"
            style="@style/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            tools:text="@string/instruction"
            tools:ignore="ExtraText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/responseName"
                style="@style/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rpsName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/responseAge"
                style="@style/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rpsAge" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/responseEmail"
                style="@style/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rpsEmail" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>